--- a/MLOPS,Deployment and Monitoring Reports/requirements.txt
+++ b/MLOPS,Deployment and Monitoring Reports/requirements.txt
@@ -1,7 +1,278 @@
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
-xgboost
+absl-py==2.1.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.6.2.post1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+astroid==3.3.5
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+attrs==24.2.0
+Automat==20.2.0
+babel==2.16.0
+bcrypt==3.2.0
+beautifulsoup4==4.12.3
+black==24.10.0
+bleach==6.2.0
+blinker==1.9.0
+bs4==0.0.2
+cachetools==5.5.2
+catboost==1.2.8
+category_encoders==2.8.1
+certifi==2024.8.30
+cffi==1.17.1
+chardet==4.0.0
+charset-normalizer==3.4.0
+click==8.1.7
+cloud-init==24.3.1
+cloudpickle==3.1.1
+colorama==0.4.6
+comm==0.2.2
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+contourpy==1.3.1
+cryptography==3.4.8
+cycler==0.12.1
+dacite==1.9.2
+dash==3.0.4
+dash-bootstrap-components==2.0.2
+dbus-python==1.2.18
+debugpy==1.8.8
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.9
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+et_xmlfile==2.0.0
+exceptiongroup==1.2.2
+executing==2.1.0
+fastjsonschema==2.20.0
+Flask==3.0.3
+flatbuffers==24.3.25
+fonttools==4.55.0
+fqdn==1.5.1
+frozendict==2.4.6
+gast==0.6.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-pasta==0.2.0
+graphviz==0.20.3
+greenlet==3.1.1
+grpcio==1.68.0
+h11==0.14.0
+h5py==3.12.1
+html5lib==1.1
+htmlmin==0.1.12
+httpcore==1.0.7
+httplib2==0.20.2
+httpx==0.27.2
+hyperlink==21.0.0
+idna==3.10
+ImageHash==4.3.1
+imageio==2.37.0
+imbalanced-learn==0.12.4
+imblearn==0.0
+importlib_metadata==8.7.0
+incremental==21.3.0
+iniconfig==2.0.0
+ipykernel==6.29.5
+ipython==8.29.0
+ipython-genutils==0.2.0
+ipython-sql==0.5.0
+ipywidgets==8.1.5
+isoduration==20.11.0
+isort==5.13.2
+itsdangerous==2.2.0
+jedi==0.19.2
+jeepney==0.7.1
+Jinja2==3.1.4
+joblib==1.4.2
+json5==0.9.28
+jsonpatch==1.32
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.6
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
+keras==3.6.0
+keyring==23.5.0
+kiwisolver==1.4.7
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lazy_loader==0.4
+libclang==18.1.1
+lightgbm==4.6.0
+llvmlite==0.44.0
+lxml==5.3.0
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mdurl==0.1.2
+mistune==3.0.2
+ml-dtypes==0.4.1
+more-itertools==8.10.0
+multimethod==1.12
+multitasking==0.0.11
+mypy-extensions==1.0.0
+namex==0.0.8
+narwhals==1.38.2
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+netifaces==0.11.0
+networkx==3.4.2
+nltk==3.9.1
+notebook==7.2.2
+notebook_shim==0.2.4
+numba==0.61.0
+numpy==2.0.2
+nvidia-nccl-cu12==2.26.5
+oauthlib==3.2.0
+opencv-python==4.11.0.86
+openpyxl==3.1.5
+opt_einsum==3.4.0
+optree==0.13.1
+overrides==7.7.0
+package-name==0.1
+packaging==24.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+pathspec==0.12.1
+patsy==1.0.1
+peewee==3.17.8
+pexpect==4.9.0
+phik==0.12.4
+pillow==11.0.0
+platformdirs==4.3.6
+plotly==5.24.1
+pluggy==1.5.0
+prettytable==3.12.0
+prometheus_client==0.21.0
+prompt_toolkit==3.0.48
+protobuf==5.28.3
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+puremagic==1.28
+pyarrow==20.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.1
+pycoingecko==3.2.0
+pycparser==2.22
+pycurl==7.44.1
+pydantic==2.11.3
+pydantic_core==2.33.1
+pydeck==0.9.1
+pygame==2.6.1
+Pygments==2.18.0
+PyGObject==3.42.1
+PyHamcrest==2.0.2
+PyJWT==2.3.0
+pylint==3.3.1
+pyOpenSSL==21.0.0
+pyparsing==3.2.0
+pypdf==5.1.0
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.15.0
+pyrsistent==0.18.1
+pyserial==3.5
+pytest==8.3.3
+python-apt==2.4.0+ubuntu4
+python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
+pytube==15.0.0
+pytz==2024.2
+PyWavelets==1.8.0
+PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
+regex==2024.11.6
+requests==2.32.3
+retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.9.4
+rpds-py==0.21.0
+scikit-image==0.25.2
+scikit-learn==1.6.1
+scipy==1.14.1
+seaborn==0.13.2
+SecretStorage==3.3.1
+Send2Trash==1.8.3
+service-identity==18.1.0
+shap==0.47.2
+six==1.16.0
+sklearn-compat==0.1.3
+slicer==0.0.8
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.36
+sqlparse==0.5.2
+stack-data==0.6.3
+statsmodels==0.14.4
+streamlit==1.45.0
+systemd-python==234
+tangled-up-in-unicode==0.2.0
+tenacity==9.0.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+termcolor==2.5.0
+terminado==0.18.1
+threadpoolctl==3.5.0
+tifffile==2025.3.30
+tinycss2==1.4.0
+tkcalendar==1.6.1
+toml==0.10.2
+tomli==2.2.1
+tomlkit==0.13.2
+tornado==6.4.1
+tqdm==4.67.0
+traitlets==5.14.3
+Twisted==22.1.0
+typeguard==4.4.2
+types-python-dateutil==2.9.0.20241003
+typing-inspection==0.4.0
+typing_extensions==4.12.2
+tzdata==2024.2
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+uri-template==1.3.0
+urllib3==2.2.3
+visions==0.8.1
+wadllib==1.3.6
+watchdog==6.0.0
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==3.0.6
+widgetsnbextension==4.0.13
+wordcloud==1.9.4
+wrapt==1.16.0
+xgboost==3.0.0
+ydata-profiling==4.16.1
+yfinance==0.2.50
+zipp==3.21.0
+zope.interface==5.4.0
